# llama.cpp

./: CLAUDE.md  CMakeLists.txt  MOE_EXPERT_LOGGING_GUIDE.md  Makefile  ggml-metal.m  llama.h
cmake/: xxd.cmake
common/: arg.cpp  common.cpp  common.h  speculative.cpp  speculative.h
docs/: metal-batch-optimization-analysis.md  speculation-logging.md
examples/: CMakeLists.txt
examples/async_spec/: CMakeLists.txt  async_spec.cpp  draft_rank.cpp  in.txt  out_logits.cpp
examples/dump-layer-data/: CMakeLists.txt  dump-layer-data.cpp  verify_layer.py
examples/dump-mlp-data/: CMakeLists.txt  dump-mlp-data.cpp  verify_mlp.py
examples/duo/: README.md  duo.cpp
examples/moe-logger/: CMakeLists.txt  moe-logger.cpp
examples/simple/: simple.cpp
ggml/: CMakeLists.txt
ggml/src/: CMakeLists.txt
ggml/src/ggml-cpu/: CMakeLists.txt  ggml-cpu.cpp
ggml/src/ggml-metal/: ggml-metal-impl.h
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
scripts/: spec_latency_analysis.py  spec_log_analyze.py  spec_temporal_analysis.py  spec_threshold_sim.py  spec_viz.py
scripts/moe-analysis/: README.md  compare_gate_experts.py  expert_frequency.py  extract_gate_tensors.py  gate_input_analysis.py
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-graph.cpp  llama-graph.h  llama-model.cpp  llama-model.h  llama-quant.cpp  llama.cpp
src/models/: llama.cpp  mistral3.cpp  models.h
tools/: CMakeLists.txt
tools/cli/: cli.cpp
tools/layer-extract/: CMakeLists.txt  layer-extract.cpp  npy-io.h
tools/server/: CMakeLists.txt  server-common.cpp  server-common.h  server-context.cpp  server-context.h  server-task.cpp  server.cpp
tools/verify-bench/: CMakeLists.txt  README.md  verify-bench.cpp
